# Interactive-Epistemic-ABM-Zollman-Using-Mesa

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  REFERENCES.md  agent.py  app.py  batch_run.ipynb  batch_run.py  interactive_model.ipynb  interactive_model.py  model.py  notebook.ipynb  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
batch  run/: batch_run.ipynb  batch_run.py
batch_run/: batch_run.ipynb  batch_run.py
batch_run/batch_run_scripts/: agent.py  model.py
batch_run/scripts/: agent.py  model.py
replications/: Frey_Seselja_replication.ipynb  Rosenstock_et_al_replication.ipynb  Rosenstocketal_replication.ipynb  Zollman_replication.ipynb
scripts/: agent.py  app.py  model.py
src/epistemic_abm/: __init__.py  app.py  model.py
tests/: test_batch_run_model.py  test_interactive_model.py  test_model.py
