[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epistemic_abm"
version = "0.2.0"
dependencies = [
    "mesa>=3.3",
    "networkx>=3.6",
    "numpy>=2.0",
    "pandas>=2.0",
    "solara>=1.57.6",
    "matplotlib>=3.10",
    "altair>=6.0",
]
requires-python = ">=3.11"
description = "Agent-based model of epistemic networks (Zollman bandit) built on Mesa"
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
notebook = [
    "jupyterlab>=4.5.3", 
    "notebook>=7.5.3",
    "pathlib>=1.0.1",
    "seaborn>=0.13.2",
]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/epistemic_abm"]